# macwifi

./: .gitignore  Cargo.toml  Justfile  Readme.md  macwifi
.github/workflows/: ci.yml
bundle/: Info.plist
scripts/: bundle.sh  reinstall.sh
src/: app.rs  client.rs  config.rs  corewlan.rs  daemon.rs  event.rs  handler.rs  install.rs  ipc.rs  keychain.rs  keychain_grant.rs  lib.rs  location.rs  main.rs  networksetup.rs  notification.rs  privileged.rs  terminal.rs  theme.rs  ui.rs  worker.rs
